-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3
-
None
-
RPMs for OpenSuSE Leap 15.0 (KDE:Qt5 repo)
-
-
fc077552673e25c580592047369acbe47f4be46d (qt/qtwebengine/5.12)
There's a nasty regression which makes QtWebEngine crash every time printing is requested (in kmail).
Apparently KMail creates a separate window for printing, and deletes it after printing, and that's when the crash happens.
See backtrace attached.
| For Gerrit Dashboard: QTBUG-75547 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 260528,5 | Do not crash on QWebEnginePagePrivate::releaseProfile() | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |